Fixed issue of navbar search overlapping with other links

--- a/static/styles.css
+++ b/static/styles.css
@@ -41,7 +41,6 @@ li {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
 }
 
 .home-link,
@@ -51,16 +50,18 @@ li {
 }
 
 .navbar {
-    background-color:#b5446e;
-    color:#fff;
+    background-color: #b5446e;
+    color: #fff;
     display: flex;
-    justify-content: space-around;
-    align-items: right;
+    justify-content: space-between; /* Ensure space between home link and nav links */
+    align-items: center;
+    padding: 0 20px; /* Add padding if necessary */
 }
 
 .nav-links {
     display: flex;
     align-items: center;
+    flex-wrap: wrap; /* Allow wrapping if there isn't enough space */
 }
 
 .nav-links li {
@@ -69,6 +70,11 @@ li {
 
 .search-form {
     margin-bottom: 1em;
+}
+
+.search-bar {
+    flex-grow: 1; /* Allow the search bar to take up available space */
+    max-width: 300px; /* Set a max-width for the search bar */
 }
 
 .search-bar input[type="text"],
@@ -81,27 +87,25 @@ li {
 }
 
 .input-wrapper {
-    position: relative; 
-    display: inline-block; 
+    display: flex;
+    align-items: center;
     width: 100%;
 }
 
 .input-wrapper input {
+    flex-grow: 1;
     padding-right: 40px;
 }
 
 .input-wrapper button {
-    position: absolute; 
-    top: 0; 
-    right: 0; 
-    border: none; 
-    background-color: transparent; 
-    cursor: pointer; 
-    font-size: 16px;
+    width: auto; /* Set the button width to fit its content */
+    padding: 10px 15px; /* Add padding to the button for better appearance */
     background-color: #eacbd2;
     color: #fff;
-    height: 100%;
-    width: 10%;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    flex-shrink: 0; /* Prevent the button from shrinking */
 }
 
 /* Hero Section */
